New minimal version of YAML added 2 new checks

--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -13,4 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Show Target URL
-        run: echo "Scanning URL: ${{ inputs.target_url }}"
+        run: |
+          echo "Scanning URL: ${{ inputs.target_url }}"
