--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -11,7 +11,20 @@ on:
 jobs:
   zap-scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Show Target URL
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: ZAP Baseline Scan
         run: |
-          echo "Scanning URL: ${{ inputs.target_url }}"
+          docker run --rm -v $(pwd):/zap/wrk/:rw -t ghcr.io/zaproxy/zap-baseline:latest \
+          -t "${{ github.event.inputs.target_url }}" \"
+          -g gen.conf -r zap_report.html || true
+
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v3
+        with: 
+          name: zap_report
+          path: zap_report.html
+
