--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -1,4 +1,4 @@
-name: ZAP Scan Workflow
+name: ZAP Baseline Scan Workflow
 
 on:
   workflow_dispatch:
@@ -16,15 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: ZAP Baseline Scan
-        run: |
-          docker run --rm -v $(pwd):/zap/wrk/:rw -t ghcr.io/zaproxy/zap-baseline:latest
-          -t "${{ github.event.inputs.target_url }}" \"
-          -g gen.conf -r zap_report.html || true
+      - name: Make scan script executable
+        run: chmod +x zap_baseline_scan.sh
+
+      - name: Run ZAP Baseline Scan
+        run: ./zap_baseline_scan.sh "${{ github.event.inputs.target_url }}"
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
-        with: 
+        with:
           name: zap_report
           path: zap_report.html
-
