--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -22,9 +22,8 @@ jobs:
       - name: Run ZAP scan script
         run: ./scripts/zap_baseline_scan.sh "${{ github.event.inputs.target_url }}"
 
-
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
-          path: zap_report.html
+          path: zap_output/zap_report.html
